# rustbook

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
docs/: 2025-12-25-image-path-fix-and-build-optimization.md
docs/en/: README.md  faq.md  structure.md
docs/ja/: faq.md  structure.md
docs/vi/: faq.md  structure.md
rustbook/: .gitignore  Cargo.toml  README.md  build.rs
rustbook/src/: main.rs
rustbook/src/builder/: mod.rs  renderer.rs  template.rs
rustbook/src/parser/: book_config.rs  langs.rs  mod.rs  summary.rs
rustbook/templates/: collapsible.js  gitbook.css  gitbook.js
src/: main.rs
src/builder/: images.rs  mod.rs  nunjucks.rs  renderer.rs  svg.rs  template.rs
src/parser/: book_config.rs  frontmatter.rs  glossary.rs  mod.rs  summary.rs
templates/: collapsible.js  fontsettings.js  gitbook.css  gitbook.js  search.js
