[package]
name = "guidebook"
version = "0.1.22"
edition = "2021"
description = "HonKit/GitBook compatible static book generator"
license = "MIT"
repository = "https://github.com/guide-inc-org/guidebook"
homepage = "https://github.com/guide-inc-org/guidebook"
readme = "README.md"
keywords = ["gitbook", "honkit", "markdown", "documentation", "static-site"]
categories = ["command-line-utilities", "development-tools"]
authors = ["guide-inc-org"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Markdown parsing
pulldown-cmark = "0.10"

# Templating
tera = "1"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File system utilities
walkdir = "2"

# Path handling
pathdiff = "0.2"

# HTTP server for serve command
tiny_http = "0.12"

# File watching for hot reload
notify = "6"

# HTTP client for update check
ureq = "2"

# URL encoding/decoding
percent-encoding = "2"

# For self-update (tar.gz extraction)
flate2 = "1"
tar = "0.4"

# For self-update (zip extraction on Windows)
zip = "0.6"
