[package]
name = "guidebook"
version = "0.1.42"
edition = "2021"
description = "HonKit/GitBook compatible static book generator"
license = "MIT"
repository = "https://github.com/guide-inc-org/guidebook"
homepage = "https://github.com/guide-inc-org/guidebook"
readme = "README.md"
keywords = ["gitbook", "honkit", "markdown", "documentation", "static-site"]
categories = ["command-line-utilities", "development-tools"]
authors = ["guide-inc-org"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Markdown parsing
pulldown-cmark = "0.10"

# Templating
tera = "1"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# YAML parsing (for front matter)
serde_yaml = "0.9"

# Error handling
anyhow = "1"

# File system utilities
walkdir = "2"

# Regex for pattern matching
regex = "1"

# HTTP server for serve command
tiny_http = "0.12"

# File watching for hot reload
notify = "6"

# HTTP client for update check
ureq = "2"

# URL encoding/decoding
percent-encoding = "2"

# For self-update (tar.gz extraction)
flate2 = "1"
tar = "0.4"

# For self-update (zip extraction on Windows)
zip = "0.6"

# Open URLs in default browser
open = "5"

# HTTP client for remote image downloading
reqwest = { version = "0.11", features = ["blocking"] }

# CRC32 hashing for image filename generation
crc32fast = "1.3"

# AsciiDoc parsing
asciidocr = "0.1"

[dev-dependencies]
# Temporary file/directory for testing
tempfile = "3"
