[package]
name = "rustbook"
version = "0.1.0"
edition = "2021"
description = "HonKit/GitBook compatible static book generator"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Markdown parsing
pulldown-cmark = "0.10"

# Templating
tera = "1"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File system utilities
walkdir = "2"

# Path handling
pathdiff = "0.2"
